[project]
name = "nice65"
version = "0.0.1"
authors = [
  { name="Andrew Dunai", email="a@dun.ai" },
]
description = "Code formatter for CC65 assembly"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lark>=1.1.5",
]

[project.urls]
"Homepage" = "https://github.com/and3rson/nice65"

[project.scripts]
nice65 = "nice65:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['nice65']

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true

[tool.isort]
profile = 'black'
